--- a/dist.ini
+++ b/dist.ini
@@ -1,27 +1,2 @@
-name             = Git-Repository-Plugin-Status
-license          = Perl_5
-version          = 0.02
-copyright_year   = 2013
-author           = Jakob Voß
-copyright_holder = Jakob Voß
-
-[@Basic]
-[PkgVersion]
-[PodWeaver]
-[Test::Perl::Critic]
-
-[Prereqs]
-Git::Repository = 1.3
-
-[PruneFiles]
-filename = dist.ini
-filename = .travis.yml
-filename = README.md
-
-[GithubMeta]
-issues=1
-
-[Git::Check]
-[Git::Tag]
-tag_message =
-[Git::Push]
+author = Jakob Voß
+[@Milla]
